--- a/package.json
+++ b/package.json
@@ -18,8 +18,19 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@mui/icons-material": "^5.14.12",
+    "@mui/material": "^5.14.12",
+    "date-fns": "^2.30.0",
+    "musixmatch": "^0.1.6",
     "rxjs": "~7.8.0",
+    "spotify-web-api-js": "^1.5.2",
     "tslib": "^2.3.0",
+    "use-spotify-player": "^1.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
